backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: trpc
  template: 
    metadata:
      labels:
        service: trpc
    spec:
      containers:
        - name: container
          image: rem-backend-image
          imagePullPolicy: Always
          ports:
            - containerPort: 3050
              name: api
