backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    service: trpc
spec:
  ports:
    - port: 3050
      name: api
      targetPort: api
  selector:
    service: trpc
